--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,9 @@
 @use "./base.scss";
 
 // put your custom CSS here!
+img[alt~=center] {
+    max-width: 100%;
+    border-radius: 5px;
+    display: block;
+    margin: 1rem auto;
+}
