--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -7,3 +7,18 @@ img[alt~=center] {
     display: block;
     margin: 1rem auto;
 }
+
+iframe[alt~=center_square] {
+    width: 400px;
+    height: 400px;
+    border-radius: 5px;
+    display: block;
+    margin: 1rem auto;
+}
+
+iframe[alt~=center] {
+    max-width: 100%;
+    border-radius: 5px;
+    display: block;
+    margin: 1rem auto;
+}
