--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -9,8 +9,6 @@ img[alt~=center] {
 }
 
 .sketch-holder {
-    width: 200px;
-    height: 200px;
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -23,4 +21,10 @@ iframe[alt~=center] {
     border-radius: 5px;
     display: block;
     margin: 1rem auto;
+}
+
+.p5Canvas{
+    max-width: 100%;
+    border-radius: 5px;
+    display: block;
 }
